--- a/package.json
+++ b/package.json
@@ -1,31 +1,69 @@
 {
-  "name": "@flashbots/searcher-sponsored-tx",
-  "version": "0.0.1",
-  "description": "",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "scripts": {
-    "start": "npx ts-node --project tsconfig.json src/index.ts",
-    "build": "npx tsc",
-    "prepare": "npm run build",
-    "lint": "npx eslint src"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0"
-  },
+  "name": "flashbots-dashboard",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "RyRy79261 <ryanjnoble@gmail.com>",
+  "repository": "https://github.com/flashbots/flashbots-dashboard.git",
+  "license": "MIT",
   "dependencies": {
-    "@flashbots/ethers-provider-bundle": "^0.4.0",
-    "eth-rpc-errors": "^4.0.3",
-    "ethers": "^5.4.2",
-    "lodash": "^4.17.20",
-    "log-timestamp": "^0.3.0",
-    "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
+    "@babel/core": "^7.12.3",
+    "@babel/runtime": "^7.12.1",
+    "@chainsafe/common-components": "^1.0.29",
+    "@chainsafe/common-theme": "^1.0.9",
+    "@material-ui/styles": "4.10.0",
+    "@types/history": "^4.7.8",
+    "@types/react-router-dom": "^5.1.7",
+    "babel-loader": "8.1.0",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "clsx": "^1.1.1",
+    "formik": "^2.2.6",
+    "react": "^16.14.0",
+    "react-beforeunload": "^2.4.0",
+    "react-dom": "^16.14.0",
+    "react-iframe": "^1.8.0",
+    "react-markdown": "^5.0.3",
+    "react-scripts": "3.4.4",
+    "react-toast-notifications": "^2.4.0",
+    "remark-gfm": "^1.0.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.7",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.0",
+    "@types/yup": "^0.29.9",
+    "chalk": "^4.1.0",
+    "craco": "^0.0.3",
+    "husky": "4.3.0",
+    "prettier": "2.1.2",
+    "pretty-quick": "3.0.2",
+    "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "start": "craco --max_old_space_size=4096 start",
+    "build": "craco --max_old_space_size=4096 build",
+    "test": "react-scripts test",
+    "deploy": "yarn run build && aws s3 sync ./build s3://dashboard.flashbots.net",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
